Bind key 'a' to avoid conflict with go to beginning of line shortcut (C-a).

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,7 @@ bind r source-file ~/.tmux.conf \; display 'Reloaded !'
 # act like GNU screen
 unbind C-b
 set -g prefix C-a
+bind a send-prefix
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
