--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,14 @@ bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+# setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'
+
+# update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'
+
 # reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display 'Reloaded !'
 
