--- a/.tmuxinator/runner.sh.yml
+++ b/.tmuxinator/runner.sh.yml
@@ -1,7 +1,7 @@
 # ~/.tmuxinator/running.yml
 
 name: running
-root: ~/Code/running-plan
+root: ~/Code/Sites/runner.sh
 windows:
   - editor: vim .
   - server: bundle exec jekyll serve -w --future
