--- a/.tmuxinator/update.yml
+++ b/.tmuxinator/update.yml
@@ -6,6 +6,6 @@ windows:
   - editor:
       layout: main-vertical
       panes:
-        - brew update; brew upgrade
-        - boxen
+        - ~/.brew
         - vundle-update
+        - emptytrash
