Use PluginUpdate install vundle-update alias

--- a/.tmuxinator/update.yml
+++ b/.tmuxinator/update.yml
@@ -7,5 +7,5 @@ windows:
       layout: main-vertical
       panes:
         - ~/.brew
-        - vundle-update
+        - vim -i NONE -c PluginUpdate -c quitall
         - emptytrash
