Enable history-substring-search module

--- a/.zpreztorc
+++ b/.zpreztorc
@@ -26,6 +26,7 @@ zstyle ':prezto:load' pmodule \
   'git' \
   'gnu-utility' \
   'history' \
+  'history-substring-search' \
   'homebrew' \
   'osx' \
   'prompt' \
