Enable syntax highlighting module

--- a/.zpreztorc
+++ b/.zpreztorc
@@ -34,6 +34,7 @@ zstyle ':prezto:load' pmodule \
   'rails' \
   'ruby' \
   'spectrum' \
+  'syntax-highlighting' \
   'terminal' \
   'tmux' \
   'utility' \
