Disable case sensitivity

--- a/.zpreztorc
+++ b/.zpreztorc
@@ -4,7 +4,7 @@
 # vim: syntax=zsh
 
 # Set case-sensitivity for completion, history lookup, etc.
-zstyle ':prezto:*:*' case-sensitive 'yes'
+zstyle ':prezto:*:*' case-sensitive 'no'
 
 # Color output (auto set to 'no' on dumb terminals).
 zstyle ':prezto:*:*' color 'yes'
