Add a pane for dotfiles update

--- a/.tmuxinator/update.yml
+++ b/.tmuxinator/update.yml
@@ -8,4 +8,5 @@ windows:
       panes:
         - ~/.brew
         - vim -i NONE -c PluginUpdate -c quitall
+        - cd ~/.dotfiles && git checkout . -q && git pull -q && make install
         - emptytrash
