--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,22 @@ diff = auto
 interactive = auto
 status = auto
 
+[color "branch"]
+current = yellow reverse
+local = yellow
+remote = green
+
+[color "diff"]
+meta = yellow bold
+frag = magenta bold # line info
+old = red # deletions
+new = green # additions
+
+[color "status"]
+added = yellow
+changed = green
+untracked = cyan
+
 [core]
 excludesfile = ~/.gitignore_global
 
