feat: make `git push` push relevant annotated tags when pushing branches out.

--- a/.gitconfig
+++ b/.gitconfig
@@ -44,6 +44,8 @@ summary = true
 
 [push]
 default = simple
+# Make `git push` push relevant annotated tags when pushing branches out.
+followTags = true
 
 [commit]
 template = ~/.gitmessage
