--- a/.zpreztorc
+++ b/.zpreztorc
@@ -83,7 +83,7 @@ zstyle ':prezto:module:git:status:ignore' submodules 'none'
 # Set the prompt theme to load.
 # Setting it to 'random' loads a random theme.
 # Auto set to 'off' on dumb terminals.
-zstyle ':prezto:module:prompt' theme 'minimal'
+zstyle ':prezto:module:prompt' theme 'pure'
 
 #
 # Ruby
