--- a/.gitconfig
+++ b/.gitconfig
@@ -39,6 +39,9 @@ textconv = hexdump -v -C
 
 [core]
 excludesfile = ~/.gitignore_global
+# Make `git rebase` safer on OS X
+# More info: <http://www.git-tower.com/blog/make-git-rebase-safe-on-osx/>
+trustctime = false
 
 [branch]
 autosetuprebase = always
