feat: prevent showing files whose names contain non-ASCII symbols as unversioned
http://michael-kuehnel.de/git/2014/11/21/git-mac-osx-and-german-umlaute.html

--- a/.gitconfig
+++ b/.gitconfig
@@ -42,6 +42,9 @@ excludesfile = ~/.gitignore_global
 # Make `git rebase` safer on OS X
 # More info: <http://www.git-tower.com/blog/make-git-rebase-safe-on-osx/>
 trustctime = false
+# Prevent showing files whose names contain non-ASCII symbols as unversioned.
+# http://michael-kuehnel.de/git/2014/11/21/git-mac-osx-and-german-umlaute.html
+precomposeunicode = false
 
 [branch]
 autosetuprebase = always
