--- a/.gitconfig
+++ b/.gitconfig
@@ -29,6 +29,12 @@ added = yellow
 changed = green
 untracked = cyan
 
+[color "diff-highlight"]
+oldNormal = red bold
+oldHighlight = red bold 52
+newNormal = green bold
+newHighlight = green bold 22
+
 [diff]
 # Detect copies as well as renames
 renames = copies
