feat(git): push the current branch to a branch of the same name

--- a/.gitconfig
+++ b/.gitconfig
@@ -64,7 +64,7 @@ log = true
 autosquash = true
 
 [push]
-default = simple
+default = current
 # Make `git push` push relevant annotated tags when pushing branches out.
 followTags = true
 
