--- a/.tmuxinator/update.yml
+++ b/.tmuxinator/update.yml
@@ -6,7 +6,7 @@ windows:
   - editor:
       layout: main-vertical
       panes:
-        - ~/.brew
+        - ~/.install.d/dns
         - vim -i NONE -c PluginUpdate -c quitall
         - cd ~/.dotfiles && git checkout . -q && git pull -q && make install
         - emptytrash
