--- a/.curlrc
+++ b/.curlrc
@@ -1,8 +1,9 @@
-# Disguise as IE 9 on Windows 7.
-user-agent = "Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)"
-
-# When following a redirect, automatically set the previous URL as referer.
+user-agent = "Mozilla/5.0 (Windows NT 6.1; rv:45.0) Gecko/20100101 Firefox/45.0"
 referer = ";auto"
-
-# Wait 60 seconds before timing out.
-connect-timeout = 60
+connect-timeout = 10
+progress-bar
+max-time = 90
+verbose
+show-error
+remote-time
+ipv4
