--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,12 +14,12 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # setup 'v' to begin selection as in Vim
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 # update default binding of `Enter` to also use copy-pipe
-unbind-key -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+#unbind-key -T copy-mode-vi Enter
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 # reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display 'Reloaded !'
@@ -40,15 +40,15 @@ set -s escape-time 50
 set -g history-limit 10000
 
 # Mouse scrolling
-set -g mouse off
+#set -g mouse off
 
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind-key -T copy-mode-vi C-WheelUpPane send-keys -X halfpage-up
-bind-key -T copy-mode-vi C-WheelDownPane send-keys -X halfpage-down
-bind-key -T copy-mode-emacs C-WheelUpPane send-keys -X halfpage-up
-bind-key -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
+#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+#bind -n WheelDownPane select-pane -t= \; send-keys -M
+#bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+#bind-key -T copy-mode-vi C-WheelUpPane send-keys -X halfpage-up
+#bind-key -T copy-mode-vi C-WheelDownPane send-keys -X halfpage-down
+#bind-key -T copy-mode-emacs C-WheelUpPane send-keys -X halfpage-up
+#bind-key -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 
 # Toggle mouse on
 bind m \
@@ -67,34 +67,57 @@ bind-key C-a last-pane
 set -g base-index 1
 set -g pane-base-index 1
 
+# Log output to a text file on demand
+bind g pipe-pane -o "cat >> ~/tmp/tmux.#W.log" \; display "Started logging to ~/tmp/tmux.#W.log"
+bind-key G pipe-pane \; display 'Ended logging to ~/tmp/tmux.#W.log'
+
 # Status bar position
-set-option -g status-position top
-
-# pane colors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg red
-set -g pane-active-border-bg black
-
-# Command / message line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-# Status bar update interval
-set -g status-interval 2
+set-option -g status-position bottom
+if-shell 'test "$(uname -s)" = Darwin' 'set-option -g status-position top'
 
 # enable activity alerts
 setw -g monitor-activity on
 set -g visual-activity on
 
+# Status bar update interval
+set -g status-interval 2
+
 # display session name as title in terminal tab
 set -g set-titles on
 setw -g automatic-rename on
 
-# Log output to a text file on demand
-bind g pipe-pane -o "cat >> ~/tmp/tmux.#W.log" \; display "Started logging to ~/tmp/tmux.#W.log"
-bind-key G pipe-pane \; display 'Ended logging to ~/tmp/tmux.#W.log'
+#
+# Theme
+#
+
+# panes
+set -g pane-border-fg colour0
+set -g pane-active-border-fg colour238
+
+# status line
+set -g status-justify left
+set -g status-bg default
+set -g status-fg default
+
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+set -g automatic-rename on
+
+# window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+# colors
+setw -g window-status-format "#[fg=colour242] •#[fg=colour242] #W "
+setw -g window-status-current-format "#[fg=colour196] •#[fg=colour231] #W "
+setw -g window-status-current-attr dim
+set -g status-position bottom
+set -g status-justify centre
+set -g status-left ""
+set -g status-right ""
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
@@ -112,6 +135,3 @@ set -g @tpm_plugins "              \
 
 # Initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
-
-# Load tmuxline configuration
-if-shell 'test -f ~/.tmuxline.conf' 'source ~/.tmuxline.conf'
