refactor(tmux): start a non-login shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal 'screen-256color'
 
 # default startup command
-if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"'
+if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 # act like vim
 setw -g mode-keys vi
