--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ language: python
 sudo: false
 python:
   - '2.7'
-addons:
-  apt:
-    sources:
-      - debian-sid
-    packages:
-      - shellcheck
 cache: pip
+before_script:
+  - mkdir -p "$HOME/bin"
+  - curl -Lso "$HOME/bin/shellcheck" https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.6/shellcheck
+  - chmod +x "$HOME/bin/shellcheck"
+  - export PATH=$HOME/bin:$PATH
 script:
   - make test
