refactor: tmux 2.8 -> 2.9 migration
close #8
ref https://github.com/tmux/tmux/issues/1689

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,8 +91,8 @@ setw -g automatic-rename on
 #
 
 # panes
-set -g pane-border-fg colour0
-set -g pane-active-border-fg colour238
+set -g pane-border-style fg=colour0
+set -g pane-active-border-style fg=colour231
 
 # status line
 set -g status-justify left
@@ -100,20 +100,17 @@ set -g status-bg default
 set -g status-fg default
 
 # messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
+set -g message-style fg=colour0,bg=colour226
+set -g message-command-style fg=colour27,bg=colour0
 set -g automatic-rename on
 
 # window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+set -g mode-style bg=colour6,fg=colour0
 
 # colors
 setw -g window-status-format "#[fg=colour242] •#[fg=colour242] #W "
 setw -g window-status-current-format "#[fg=colour196] •#[fg=colour231] #W "
-setw -g window-status-current-attr dim
+setw -g window-status-current-style bright
 set -g status-justify centre
 set -g status-left ""
 set -g status-right ""
