feat: set vi-cmd-mode-string/vi-ins-mode-string

--- a/.inputrc
+++ b/.inputrc
@@ -2,3 +2,5 @@ set completion-ignore-case on
 set editing-mode vi
 set show-all-if-ambiguous on
 set show-mode-in-prompt on
+set vi-cmd-mode-string \1\e[2 q\2
+set vi-ins-mode-string \1\e[1 q\2
