--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ python:
 cache: pip
 before_script:
   - mkdir -p "$HOME/bin"
-  - curl -Lso "$HOME/bin/shellcheck" https://github.com/caarlos0/shellcheck-docker/releases/download/v0.4.6/shellcheck
-  - chmod +x "$HOME/bin/shellcheck"
+  - wget -qO- 'https://storage.googleapis.com/shellcheck/shellcheck-v0.6.0.linux.x86_64.tar.xz' | tar -xJv
+  - mv 'shellcheck-v0.6.0/shellcheck' "$HOME/bin/shellcheck"
+  - chmod + "$HOME/bin/shellcheck"
   - export PATH=$HOME/bin:$PATH
 script:
   - make test
