refactor: tpm plugins list and tpm initialization

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -119,15 +119,11 @@ set -g status-right ""
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 
 # List of plugins
-# Supports `github_username/repo` or full git URLs
-set -g @tpm_plugins "              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-yank           \
-  tmux-plugins/tmux-open           \
-  tmux-plugins/tmux-online-status  \
-"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/yank'
+set -g @plugin 'tmux-plugins/open'
 
-# Initializes TMUX plugin manager
-run-shell ~/.tmux/plugins/tpm/tpm
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
