feat(starship): display battery status if >30%

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -44,3 +44,14 @@ show_swap = true
 threshold = 75
 separator = "/"
 style = "bold dimmed red"
+
+[battery]
+disabled = false
+
+[[battery.display]]
+threshold = 10
+style = "bold red"
+
+[[battery.display]]
+threshold = 30
+style = "bold yellow"
