--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,3 +1,4 @@
+alt_send_esc: false
 font:
   size: 13.0
   normal:
@@ -9,6 +10,14 @@ font:
   italic:
     family: Hack
     style: Italic
+key_bindings:
+  - { key: L, mods: Alt|Shift, chars: "|" }
+  - { key: Key5, mods: Alt, chars: "{" }
+  - { key: Minus, mods: Alt, chars: "}" }
+  - { key: Key5, mods: Alt|Shift, chars: "[" }
+  - { key: Minus, mods: Alt|Shift, chars: "]" }
+  - { key: N, mods: Alt, chars: "~" }
+  - { key: Return, mods: Command, action: ToggleFullscreen }
 live_config_reload: true
 window:
   startup_mode: Maximized
