--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 ---
-
 language: python
 sudo: false
 python:
-  - '3.8'
+  - "3.8"
 cache: pip
 before_script:
   - mkdir -p "$HOME/bin"
-  - wget -qO- 'https://storage.googleapis.com/shellcheck/shellcheck-v0.6.0.linux.x86_64.tar.xz' | tar -xJv
-  - mv 'shellcheck-v0.6.0/shellcheck' "$HOME/bin/shellcheck"
+  - export SHELLCHECK_VERSION=v0.7.1
+  - wget -qO- https://github.com/koalaman/shellcheck/releases/download/${SHELLCHECK_VERSION}/shellcheck-${SHELLCHECK_VERSION}.linux.x86_64.tar.xz | tar -xJv
+  - mv "shellcheck-${SHELLCHECK_VERSION}/shellcheck" "$HOME/bin/shellcheck"
   - chmod +x "$HOME/bin/shellcheck"
   - export PATH=$HOME/bin:$PATH
 script:
