chore: enforce tmux mouse scrolling config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,9 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # setup 'v' to begin selection as in Vim
-#bind-key -T copy-mode-vi v send-keys -X begin-selection
-#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # update default binding of `Enter` to also use copy-pipe
 #unbind-key -T copy-mode-vi Enter
@@ -36,16 +37,18 @@ set -s escape-time 50
 # increase scrollback lines
 set -g history-limit 10000
 
-# Mouse scrolling
-#set -g mouse off
+bind u copy-mode -e
 
-#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-#bind -n WheelDownPane select-pane -t= \; send-keys -M
-#bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-#bind-key -T copy-mode-vi C-WheelUpPane send-keys -X halfpage-up
-#bind-key -T copy-mode-vi C-WheelDownPane send-keys -X halfpage-down
-#bind-key -T copy-mode-emacs C-WheelUpPane send-keys -X halfpage-up
-#bind-key -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
+# Mouse scrolling
+set -g mouse off
+
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind-key -T copy-mode-vi C-WheelUpPane send-keys -X halfpage-up
+bind-key -T copy-mode-vi C-WheelDownPane send-keys -X halfpage-down
+bind-key -T copy-mode-emacs C-WheelUpPane send-keys -X halfpage-up
+bind-key -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 
 # Toggle mouse on
 bind m \
