chore(tmux): update `pane-border-style`

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,7 +91,7 @@ setw -g automatic-rename on
 #
 
 # panes
-set -g pane-border-style fg=colour0
+set -g pane-border-style fg=colour239,bg=default,none
 set -g pane-active-border-style fg=colour231
 
 # status line
