--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,6 +67,11 @@ bind-key C-a last-pane
 set -g base-index 1
 set -g pane-base-index 1
 
+# Split window with | and -
+unbind %
+bind | split-window -h
+bind - split-window -v
+
 # Log output to a text file on demand
 bind g pipe-pane -o "cat >> ~/tmp/tmux.#W.log" \; display "Started logging to ~/tmp/tmux.#W.log"
 bind-key G pipe-pane \; display 'Ended logging to ~/tmp/tmux.#W.log'
