style(starship): use `$` as prompt symbol

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,7 +1,8 @@
 add_newline = true
 
 [character]
-symbol = "$"
+success_symbol = "[\\$](bold green)"
+error_symbol = "[\\$](bold red)"
 use_symbol_for_status = false
 
 [docker]
