chore(tmux): enforce status bar bg color to black

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,8 +101,8 @@ set -g pane-active-border-style fg=colour231
 
 # status line
 set -g status-justify centre
-set -g status-bg default
-set -g status-fg default
+set -g status-bg colour232
+set -g status-fg colour246
 
 # messaging
 set -g message-style fg=colour0,bg=colour226
