style(alacritty): set windows decoration to buttonless and add padding
It's easier to grab the windows to put it on a 2nd screen.

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -74,8 +74,8 @@ key_bindings:
 live_config_reload: true
 window:
   startup_mode: Maximized
-  decorations: none
+  decorations: buttonless
   dynamic_padding: true
   padding:
-    x: 0
-    y: 0
+    x: 5
+    y: 5
