--- a/.tigrc
+++ b/.tigrc
@@ -37,8 +37,15 @@ bind generic YI @sh -c "printf '%s' %(commit) | pbcopy"
 bind generic YM @sh -c "git rev-list --format=%B --max-count=1 %(commit) | sed '1d' | pbcopy"
 
 # Colors
-color cursor         white  black   bold
-color id             yellow default bold
-color author         green  default bold
-color title-blur     white  black
-color title-focus    white  black   bold
+set git-colors = no
+
+color cursor          black   green
+color search-result   black   yellow
+color line-number     red     black
+color title-focus     black   yellow
+color title-blur      black   magenta
+color diff-header     yellow  default
+color diff-index      blue    default
+color diff-chunk      magenta default
+color "Reported-by:"  green   default
+color tree.date       black   cyan    bold
