--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,4 +1,3 @@
-alt_send_esc: false
 # https://raw.githubusercontent.com/dracula/alacritty/master/dracula.yml
 colors:
   primary:
@@ -75,6 +74,7 @@ window:
   startup_mode: Maximized
   decorations: buttonless
   dynamic_padding: true
+  option_as_alt: OnlyLeft
   padding:
     x: 5
     y: 5
