--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,56 +1,83 @@
-# https://raw.githubusercontent.com/dracula/alacritty/master/dracula.yml
+# https://raw.githubusercontent.com/catppuccin/alacritty/main/catppuccin-latte.yml
 colors:
+  # Default colors
   primary:
-    background: "#282a36"
-    foreground: "#f8f8f2"
-    bright_foreground: "#ffffff"
+    background: "#EFF1F5" # base
+    foreground: "#4C4F69" # text
+    # Bright and dim foreground colors
+    dim_foreground: "#4C4F69" # text
+    bright_foreground: "#4C4F69" # text
+
+  # Cursor colors
   cursor:
-    text: CellBackground
-    cursor: CellForeground
+    text: "#EFF1F5" # base
+    cursor: "#DC8A78" # rosewater
   vi_mode_cursor:
-    text: CellBackground
-    cursor: CellForeground
+    text: "#EFF1F5" # base
+    cursor: "#7287FD" # lavender
+
+  # Search colors
   search:
     matches:
-      foreground: "#44475a"
-      background: "#50fa7b"
+      foreground: "#EFF1F5" # base
+      background: "#6C6F85" # subtext0
     focused_match:
-      foreground: "#44475a"
-      background: "#ffb86c"
-  footer_bar:
-    background: "#282a36"
-    foreground: "#f8f8f2"
+      foreground: "#EFF1F5" # base
+      background: "#40A02B" # green
+    footer_bar:
+      foreground: "#EFF1F5" # base
+      background: "#6C6F85" # subtext0
+
+  # Keyboard regex hints
   hints:
     start:
-      foreground: "#282a36"
-      background: "#f1fa8c"
+      foreground: "#EFF1F5" # base
+      background: "#DF8E1D" # yellow
     end:
-      foreground: "#f1fa8c"
-      background: "#282a36"
-  line_indicator:
-    foreground: None
-    background: None
+      foreground: "#EFF1F5" # base
+      background: "#6C6F85" # subtext0
+
+  # Selection colors
   selection:
-    text: CellForeground
-    background: "#44475a"
+    text: "#EFF1F5" # base
+    background: "#DC8A78" # rosewater
+
+  # Normal colors
   normal:
-    black: "#21222c"
-    red: "#ff5555"
-    green: "#50fa7b"
-    yellow: "#f1fa8c"
-    blue: "#bd93f9"
-    magenta: "#ff79c6"
-    cyan: "#8be9fd"
-    white: "#f8f8f2"
+    black: "#5C5F77" # subtext1
+    red: "#D20F39" # red
+    green: "#40A02B" # green
+    yellow: "#DF8E1D" # yellow
+    blue: "#1E66F5" # blue
+    magenta: "#EA76CB" # pink
+    cyan: "#179299" # teal
+    white: "#ACB0BE" # surface2
+
+  # Bright colors
   bright:
-    black: "#6272a4"
-    red: "#ff6e6e"
-    green: "#69ff94"
-    yellow: "#ffffa5"
-    blue: "#d6acff"
-    magenta: "#ff92df"
-    cyan: "#a4ffff"
-    white: "#ffffff"
+    black: "#6C6F85" # subtext0
+    red: "#D20F39" # red
+    green: "#40A02B" # green
+    yellow: "#DF8E1D" # yellow
+    blue: "#1E66F5" # blue
+    magenta: "#EA76CB" # pink
+    cyan: "#179299" # teal
+    white: "#BCC0CC" # surface1
+
+  # Dim colors
+  dim:
+    black: "#5C5F77" # subtext1
+    red: "#D20F39" # red
+    green: "#40A02B" # green
+    yellow: "#DF8E1D" # yellow
+    blue: "#1E66F5" # blue
+    magenta: "#EA76CB" # pink
+    cyan: "#179299" # teal
+    white: "#ACB0BE" # surface2
+
+  indexed_colors:
+    - { index: 16, color: "#FE640B" }
+    - { index: 17, color: "#DC8A78" }
 font:
   size: 13.0
   normal:
