--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -6,8 +6,9 @@ add_newline = true
 style = "bold #ffb86c"
 
 [character]
-error_symbol = "[\\$](bold #ff5555)"
-success_symbol = "[\\$](bold #50fa7b)"
+error_symbol = "[\\$](bold green)"
+success_symbol = "[\\$](bold red)"
+vimcmd_symbol = "[❮](green)"
 
 [cmd_duration]
 style = "bold #f1fa8c"
@@ -93,3 +94,34 @@ style = "bold red"
 [[battery.display]]
 threshold = 30
 style = "bold yellow"
+
+palette = "catppuccin_latte"
+
+# https://raw.githubusercontent.com/catppuccin/starship/main/palettes/latte.toml
+[palettes.catppuccin_latte]
+rosewater = "#dc8a78"
+flamingo = "#dd7878"
+pink = "#ea76cb"
+mauve = "#8839ef"
+red = "#d20f39"
+maroon = "#e64553"
+peach = "#fe640b"
+yellow = "#df8e1d"
+green = "#40a02b"
+teal = "#179299"
+sky = "#04a5e5"
+sapphire = "#209fb5"
+blue = "#1e66f5"
+lavender = "#7287fd"
+text = "#4c4f69"
+subtext1 = "#5c5f77"
+subtext0 = "#6c6f85"
+overlay2 = "#7c7f93"
+overlay1 = "#8c8fa1"
+overlay0 = "#9ca0b0"
+surface2 = "#acb0be"
+surface1 = "#bcc0cc"
+surface0 = "#ccd0da"
+base = "#eff1f5"
+mantle = "#e6e9ef"
+crust = "#dce0e8"
