--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -1,65 +1,60 @@
-live_config_reload = true
+# https://raw.githubusercontent.com/dracula/alacritty/master/dracula.toml
+[colors.primary]
+background = "#282a36"
+foreground = "#f8f8f2"
+bright_foreground = "#ffffff"
+
+[colors.cursor]
+text = "#282a36"
+cursor = "#f8f8f2"
+
+[colors.vi_mode_cursor]
+text = "CellBackground"
+cursor = "CellForeground"
+
+[colors.selection]
+text = "CellForeground"
+background = "#44475a"
+
+[colors.normal]
+black = "#21222c"
+red = "#ff5555"
+green = "#50fa7b"
+yellow = "#f1fa8c"
+blue = "#bd93f9"
+magenta = "#ff79c6"
+cyan = "#8be9fd"
+white = "#f8f8f2"
 
 [colors.bright]
 black = "#6272a4"
-blue = "#d6acff"
-cyan = "#a4ffff"
-green = "#69ff94"
-magenta = "#ff92df"
 red = "#ff6e6e"
-white = "#ffffff"
+green = "#69ff94"
 yellow = "#ffffa5"
+blue = "#d6acff"
+magenta = "#ff92df"
+cyan = "#a4ffff"
+white = "#ffffff"
 
-[colors.cursor]
-cursor = "CellForeground"
-text = "CellBackground"
+[colors.search.matches]
+foreground = "#44475a"
+background = "#50fa7b"
+
+[colors.search.focused_match]
+foreground = "#44475a"
+background = "#ffb86c"
 
 [colors.footer_bar]
 background = "#282a36"
 foreground = "#f8f8f2"
 
-[colors.hints.end]
-background = "#282a36"
-foreground = "#f1fa8c"
-
 [colors.hints.start]
-background = "#f1fa8c"
 foreground = "#282a36"
+background = "#f1fa8c"
 
-[colors.line_indicator]
-background = "None"
-foreground = "None"
-
-[colors.normal]
-black = "#21222c"
-blue = "#bd93f9"
-cyan = "#8be9fd"
-green = "#50fa7b"
-magenta = "#ff79c6"
-red = "#ff5555"
-white = "#f8f8f2"
-yellow = "#f1fa8c"
-
-[colors.primary]
+[colors.hints.end]
+foreground = "#f1fa8c"
 background = "#282a36"
-bright_foreground = "#ffffff"
-foreground = "#f8f8f2"
-
-[colors.search.focused_match]
-background = "#ffb86c"
-foreground = "#44475a"
-
-[colors.search.matches]
-background = "#50fa7b"
-foreground = "#44475a"
-
-[colors.selection]
-background = "#44475a"
-text = "CellForeground"
-
-[colors.vi_mode_cursor]
-cursor = "CellForeground"
-text = "CellBackground"
 
 [font]
 size = 13.0
