--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@ whitespace = fix
 [user]
 name = Benjamin Dos Santos
 email = benjamin.dossantos@gmail.com
-signingkey = ssh-ed25519 ~/.ssh/id_ed25519.pub
+signingkey = ~/.ssh/id_ed25519.pub
 
 [gpg]
 format = ssh
