feat(starship): display red prompt when we are on a production k8s cluster

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -67,6 +67,9 @@ disabled = true
 
 [kubernetes]
 disabled = false
+contexts = [
+  { context_pattern = "*-prd", style = "bold red", symbol = "⚠️  DANGER ⚠️  " }
+]
 
 [username]
 format = "[$user]($style) on "
